Index Style und HTML fertig.

--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,21 @@
     <link href="styles/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<br>
+<br>
+<br>
+<img src="resources/logo.png" id="logobild" alt="Das Logo der Webseite" class="center">
 
-<img src="resources/logo.png" id="logobild" alt="Das Logo der Webseite" height="150"/>
-
-
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-
 
 <form>
-    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button" height="42">
+    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
 </form>
 
 <form>
-    <input type="image" id="aktivieren_button" src="resources/aktivieren_button.png" alt="Login Button" height="42">
+    <input type="image" id="aktivieren_button" src="resources/aktivieren_button.png" alt="Login Button"  class="center">
 </form>
 </body>
 </html>
