Screen Ausloggen mit style

--- a/public/ausloggen.html
+++ b/public/ausloggen.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Sie haben sich ausgeloggt!</title>
+    <link href="styles/ausloggen.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
 
+<br>
+<br>
+<img src="resources/logo.png" id="logobild" alt="Das Logo der Webseite" class="center">
+<br>
+<br>
+<p class="center">Sie haben sich ausgeloggt!</p>
+<form>
+    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
+</form>
+
 </body>
+
 </html>
