Html + Css Stylesheet für die Patienten Home Page

--- a/public/patient_page.html
+++ b/public/patient_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Patient Home Screen</title>
-    <link href="./css/PatientPage.css" type="text/css" rel="stylesheet">
+    <link href="./styles/patient_page.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="Patient">
@@ -13,11 +13,11 @@
     <br>
     <br>
     <div id="bgFormular" class="Hintergrund">
-        <img src="./img/solid_orange_background.jpg" alt="Der Hintergrund für den Button zum Formular">
+        <img src="" alt="Der Hintergrund für den Button zum Formular">
         <button type="button">Beschwerden melden</button>
     </div>
     <div id="bgAkte" class="Hintergrund">
-        <img src="./img/solid_orange_background.jpg" alt="Der Hintergrund für den Button zur Patientenakte">
+        <img src="" alt="Der Hintergrund für den Button zur Patientenakte">
         <button type="button">Patientenakte öffnen</button>
     </div>
 </body>
