Html + Css Stylesheet für die Patienten Home Page

--- a/public/patient_page.html
+++ b/public/patient_page.html
@@ -17,7 +17,7 @@
         <button type="button">Beschwerden melden</button>
     </div>
     <div id="bgAkte" class="Hintergrund">
-        <img src="" alt="Der Hintergrund für den Button zur Patientenakte">
+        <img src="./resources/" alt="Der Hintergrund für den Button zur Patientenakte">
         <button type="button">Patientenakte öffnen</button>
     </div>
 </body>
