Html + Css Stylesheet für die Patienten Home Page

--- a/public/patient_page.html
+++ b/public/patient_page.html
@@ -13,12 +13,12 @@
     <br>
     <br>
     <div id="bgFormular" class="Hintergrund">
-        <img src="" alt="Der Hintergrund für den Button zum Formular">
-        <button type="button">Beschwerden melden</button>
+        <!--img src="./resources/formularausfüllen_bild.png" alt="Der Hintergrund für den Button zum Formular"-->
+        <!--button type="button">Beschwerden melden</button-->
     </div>
     <div id="bgAkte" class="Hintergrund">
-        <img src="./resources/" alt="Der Hintergrund für den Button zur Patientenakte">
-        <button type="button">Patientenakte öffnen</button>
+        <!--img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für den Button zur Patientenakte"-->
+        <!--button type="button">Patientenakte öffnen</button-->
     </div>
 </body>
 </html>
