Patient anlegen HTML CSS

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Health4Everyone</title>
+    <link rel ="resources/logo.png">
     <link href="styles/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
