Html + Css Stylesheet für die Patienten Home Page

--- a/public/beschwerde.html
+++ b/public/beschwerde.html
@@ -9,10 +9,18 @@
     <div class="bg_überschrift">
         <span>Beschwerden melden</span>
     </div>
-    <div class="bg_form">
-        <form id="beschreibung">
-            <input type="text" value="Bitte beschreiben sie kurz ihre Beschwerden hier.">
-        </form>
+    <form>
+        <input name="desc" id="beschreibung" type="text" value="Bitte beschreiben sie kurz ihre Beschwerden hier.">
+    </form>
+    <div class="bg_ankreuzen">
+        <input type="checkbox" id="ja_1_check">
+        <input type="checkbox" id="nein_1_check">
+        <p id="ankreuzen_text">Haben sie in letzter Zeit neue Medikamente eingenommen?</p>
+        <p id="ja_1_p">Ja</p>
+        <p id="nein_1_p">Nein</p>
+    </div>
+    <div class="meds">
+        
     </div>
 </body>
 </html>
