--- a/public/patient_anlegen_per_daten.html
+++ b/public/patient_anlegen_per_daten.html
@@ -24,15 +24,20 @@
     <input type="image" id="weiter_button" src="resources/weiter_button.png" alt="weiter button" class="bottom_right">
 </form>
 
+
+    <p class="center">Bitte Geschlecht auswählen.</p>
+
+
+
 <div class="center">
     <form>
-        <input type="image" id="male" src="resources/male_icon.png" alt="maskulin geschlecht">
+        <input type="image" id="male" src="resources/male_icon.png" alt="maskulin geschlecht" class="maskulin_position_button">
     </form>
     <form>
-        <input type="image" id="female" src="resources/female_icon.png" alt="feminin geschlecht">
+        <input type="image" id="female" src="resources/female_icon.png" alt="feminin geschlecht" class ="position_female_button">
     </form>
     <form>
-        <input type="image" id="gemischt" src="resources/gemischt_icon.png" alt="gemischt geschlecht">
+        <input type="image" id="gemischt" src="resources/gemischt_icon.png" alt="gemischt geschlecht" class="position_gemischt_button">
     </form>
 
 </div>
