--- a/public/patient_anlegen_vitalparameter.html
+++ b/public/patient_anlegen_vitalparameter.html
@@ -5,34 +5,57 @@
     <title>Patient anlegen</title>
     <link href="styles/patient_anlegen_vitalparameter_style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-<img src="resources/vitalparameter_kategorie.png" id="vitalparameter" alt="Vitalparameter Kategorie">
+    <img src="resources/vitalparameter_kategorie.png" id="vitalparameter" alt="Vitalparameter Kategorie">
 
-<form>
-    <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
-</form>
-
-<form>
-    <input type="image" id="oberkörper" src="resources/oberkörper.png" alt="oberkörper" class="oberkörper">
-</form>
-
-<form>
-    <input type="image" id="beine" src="resources/beine.png" alt="beine" class="beine">
-</form>
-
-<div>
-<input type="image" id="rechte hand" src="resources/rechte_hand.png" alt="rechte hand" class="rechte_hand">
-<input type="image" id="linke hand" src="resources/linke_hand.png" alt="linke hand" class="linke_hand">
-</div>
+    <form>
+         <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
+    </form>
 
 
-<textarea rows="4" cols="50" class="notizblock">
-Notizen
-</textarea>
 
-<form>
-    <input type="image" id="bestätigen_button" src="resources/bestätigen_button.png" alt="bestätigen button" class="bottom_right">
-</form>
+    <div>
+        <form>
+            <input type="image" id="oberkörper" src="resources/ober_mit_hand.png" alt="oberkörper" class="oberkörper">
+         </form>
+
+    </div>
+
+    <div>
+        <form>
+             <input type="image" id="beine" src="resources/beine.png" alt="beine" class="beine">
+         </form>
+    </div>
+
+
+
+    <div>
+        <textarea rows="4" cols="50" class="notizblock">
+            Notizen
+        </textarea>
+    </div>
+
+    <div>
+        <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
+    </div>
+    <input type="text" id="gehrindaten" name="gehirndaten" placeholder="Bitte Werte eintragen.">
+    <div>
+        <img src="resources/herz.png" id="herz" alt="Herz">
+    </div>
+    <input type="text" id="herzdaten" name="herzdaten" placeholder="Bitte Werte eintragen.">
+    <div>
+        <img src="resources/lungen.png" id="lunge" alt="Lunge">
+    </div>
+    <input type="text" id="lungendaten" name="lungendaten" placeholder="Bitte Werte eintragen.">
+    <div>
+        <img src="resources/nieren.png" id="nieren" alt="Niere">
+    </div>
+    <input type="text" id="nierendaten" name="nierendaten" placeholder="Bitte Werte eintragen.">
+
+    <form>
+        <input type="image" id="bestätigen_button" src="resources/bestätigen_button.png" alt="bestätigen button" class="bottom_right">
+    </form>
 
 </body>
 </html>
