Html + Css Stylesheet für die Patienten Home Page

--- a/public/beschwerde.html
+++ b/public/beschwerde.html
@@ -20,7 +20,16 @@
         <p id="nein_1_p">Nein</p>
     </div>
     <div class="meds">
-
+        <p id="meds_text_1">Falls sie mit Ja geantwortet haben,</p>
+        <p id="meds_text_2">welche Medikamente waren es?</p>
+        <form>
+            <input name="desc_meds_1" id="beschreibung_meds_1" type="text" value="Bitte hier die Medikamente eintragen.">
+        </form>
+        <p id="meds_text_3">Weswegen haben sie die Medikamente</p>
+        <p id="meds_text_4">eingenommen?</p>
+        <form>
+            <input name="desc_meds_2" id="beschreibung_meds_2" type="text" value="Bitte hier den Grund der Einnahme eintragen.">
+        </form>
     </div>
 </body>
 </html>
