Html + Css Stylesheet für die Beschwerden Page

--- a/public/beschwerde.html
+++ b/public/beschwerde.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="bg_überschrift">
-        <span>Beschwerden melden</span>
+        <p>Beschwerden melden</p>
     </div>
     <form>
         <input title="desc" id="beschreibung" type="text" value="Bitte beschreiben sie kurz ihre Beschwerden hier.">
@@ -61,5 +61,7 @@
         <p id="ja_4_p">Ja</p>
         <p id="nein_4_p">Nein</p>
     </div>
+    <a href="" class="link_senden_button"></a>
+    <img id="senden_button" src="resources/formular_senden_button.png" alt="Button zum Senden des Formulars">
 </body>
 </html>
