--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <br>
 <br>
 
-<form>
+<form action="login_page.html">
     <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
 </form>
 
