Html + Css Stylesheet für die konto aktivieren page

--- a/public/beschwerde.html
+++ b/public/beschwerde.html
@@ -10,7 +10,7 @@
         <p>Beschwerden melden</p>
     </div>
     <form>
-        <input title="desc" id="beschreibung" type="text" value="Bitte beschreiben sie kurz ihre Beschwerden hier.">
+        <input title="desc" id="beschreibung" type="text" placeholder="Bitte beschreiben sie kurz ihre Beschwerden hier.">
     </form>
     <div class="bg_ankreuzen">
         <input title="check" type="checkbox" id="ja_1_check">
@@ -23,12 +23,12 @@
         <p id="meds_text_1">Falls sie mit Ja geantwortet haben,</p>
         <p id="meds_text_2">welche Medikamente waren es?</p>
         <form>
-            <input title="desc_meds_1" id="beschreibung_meds_1" type="text" value="Bitte hier die Medikamente eintragen.">
+            <input title="desc_meds_1" id="beschreibung_meds_1" type="text" placeholder="Bitte hier die Medikamente eintragen.">
         </form>
         <p id="meds_text_3">Weswegen haben sie die Medikamente</p>
         <p id="meds_text_4">eingenommen?</p>
         <form>
-            <input title="desc_meds_2" id="beschreibung_meds_2" type="text" value="Bitte hier den Grund der Einnahme eintragen.">
+            <input title="desc_meds_2" id="beschreibung_meds_2" type="text" placeholder="Bitte hier den Grund der Einnahme eintragen.">
         </form>
     </div>
     <div class="bg_infection">
