--- a/public/nutzer_anlegen.html
+++ b/public/nutzer_anlegen.html
@@ -20,11 +20,11 @@
                 <option value="Admin">Admin</option>
             </select>
             <p class="nutzer_status">Bitte Geschlecht auswählen.</p>
-            <a class="gender" href="">
+            <a class="gender" href="#">
                 <img src="resources/male_icon.png" alt="Das Zeichen für das männliche Geschlecht"></a>
-            <a class="gender" href="">
+            <a class="gender" href="#">
                 <img src="resources/female_icon.png" alt="Das Zeichen für das weibliche Geschlecht"></a>
-            <a class="gender" href="">
+            <a class="gender" href="#">
                 <img src="resources/gemischt_icon.png" alt="Das Zeichen für das gemischte Geschlecht">
             </a>
         </form>
