--- a/public/ausloggen.html
+++ b/public/ausloggen.html
@@ -14,7 +14,7 @@
 <br>
 <br>
 <p class="center">Sie haben sich ausgeloggt!</p>
-<form>
+<form action="login_page.html">
     <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
 </form>
 
