--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Startseite-->
 <head>
     <meta charset="UTF-8">
     <title>Health4Everyone</title>
-    <link rel ="resources/logo.png">
+    <link rel="resources/logo.png">
     <link href="styles/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <br>
 <br>
 <br>
-<img src="resources/logo.png" id="logobild" alt="Das Logo der Webseite" class="center">
+<img src="resources/logo.png" id="logobild" alt="Das Logo der Webseite" class="center"> <!--Logo der Webseite als Imagge-->
 
 <br>
 <br>
 <br>
 
-<form action="login_page.html">
-    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
+<form action="login_page.html"> <!--Knopf der zur Login Seite weiterführt (action)-->
+    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button" class="center">
 </form>
 
-<form>
-    <input type="image" id="aktivieren_button" src="resources/aktivieren_button.png" alt="Login Button"  class="center">
+<form action="konto_aktivieren.html"> <!--Knopf der zur Konto aktivieren Seite weiterführt (action)-->
+    <input type="image" id="aktivieren_button" src="resources/aktivieren_button.png" alt="Login Button" class="center">
 </form>
 </body>
 </html>
