--- a/public/informatiker_page.html
+++ b/public/informatiker_page.html
@@ -6,6 +6,7 @@
     <link href="./styles/informatiker_page_style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<!--Startseite/Profil des METI Informatikers-->
 <div class="Informatiker">
     <strong>Elliot Alderson</strong>
     <p>Admin</p>
@@ -16,12 +17,12 @@
 
     <br>
     <br>
-    <div id="bgAnlegen" class="Hintergrund">
+    <div id="bgAnlegen" class="Hintergrund"><!--Container mit CSS Hintergrundeinstellungen für Nutzer anlegen-->
         <img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für Nutzer anlegen">
-        <button id="nutzer_anlegen" type="button">Nutzer anlegen</button>
+        <button onClick="location.href='nutzer_anlegen.html'" id="nutzer_anlegen" type="button">Nutzer anlegen</button>
     </div>
 
-    <div id="bgAkte" class="Hintergrund">
+    <div id="bgAkte" class="Hintergrund"><!--Container mit CSS Hintergrundeinstellungen für Nutzerakte öffnen-->
         <img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für den Button zur Nutzerakte">
         <button id="akte" type="button">Nutzerprofile öffnen</button>
     </div>
