--- a/public/konto_aktivieren.html
+++ b/public/konto_aktivieren.html
@@ -13,10 +13,14 @@
         <input name="name" placeholder="Benutzername eingeben" type="text"><br>
         <input name="pass" placeholder="Aktivierungspasswort" type="text"><br>
     </form>
-    <div>
-        <a class="weiter" href="">
-            <img src="resources/weiter_button.png" alt="Der Weiter Button">
-        </a>
-    </div>
+
+
+        <form action="passwort_anlegen.html">
+
+            <input type="image" id="pw_anlegen_button" src="resources/weiter_button.png" alt="Der Weiter Button">
+
+        </form>
+
 </body>
 </html>
+
