--- a/public/patient_anlegen_per_daten.html
+++ b/public/patient_anlegen_per_daten.html
@@ -20,7 +20,7 @@
 <input type="text" id="geburtstag" name="geburtstag" placeholder="Geburtstag" class="center">
 
 
-<form>
+<form action ="patient_anlegen_vitalparameter.html">
     <input type="image" id="weiter_button" src="resources/weiter_button.png" alt="weiter button" class="bottom_right">
 </form>
 
