--- a/public/patientenakte_suchen.html
+++ b/public/patientenakte_suchen.html
@@ -15,7 +15,7 @@
 <input type="text" id="patienten_id" name="patienten_id" placeholder="Patienten ID" class="center">
 <br>
 <input type="text" id="patientenname" name="patientenname" placeholder="Name des Patienten" class="center">
-<form>
+<form action ="patientenakte_öffnen.html">
     <input type="image" id="weiter_button" src="resources/button_weiter_blau.png" alt="weiter button" class="bottom_right">
 </form>
 
