--- a/public/patientenakte_öffnen.html
+++ b/public/patientenakte_öffnen.html
@@ -10,7 +10,7 @@
 <p id="p" class="center">Patienten ID</p>
 
 
-<form>
+<form action="arzt_page.html">
     <input type="image" id="schließen_button" src="resources/button_schließen_blau.png" alt="schließen button" class="bottom_right">
 </form>
 <form>
