--- a/public/arzt_page.html
+++ b/public/arzt_page.html
@@ -7,12 +7,21 @@
 </head>
 <body>
 
-
 <div class="Arzt">
     <strong>Prof. Dr. med. Pagliaro</strong>
     <p>Fachbereich Neurologie</p>
     <div class="bg_foto">
         <img class="Arztfoto" src="resources/arzt_face.png">
+    </div>
+</div>
+
+
+<div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+        <a href="#">Benachrichtigung</a>
+        <a href="#">Einstellungen</a>
+        <a href="#">Ausloggen</a>
     </div>
 </div>
 
