--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <br>
 <br>
 
-<form action="login_page.html"> <!--Knopf der zur Login Seite weiterführt (action)-->
+<form action="/login_page"> <!--Knopf der zur Login Seite weiterführt (action)-->
     <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button" class="center">
 </form>
 
