--- a/public/login_page.html
+++ b/public/login_page.html
@@ -12,21 +12,17 @@
 <br>
 <br>
 
-<div class="center2">
 
+<form action="/login_page" method="post">
     <b>Username</b>
-<br>
-<input type="text" placeholder="Enter Username" name="uname" required>
-<br>
-</div>
-<div class="center2">
+    <br>
+    <input type="text" placeholder="Enter Username" name="uname" required>
+    <br>
     <b>Password</b>
-<br>
-<input type="password" placeholder="Enter Password" name="psw" required>
-</div>
-
-<form>
-    <input type="image" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
+    <br>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="submit" id="login_button" src="resources/login_button.png" alt="Login Button"  class="center">
 </form>
+
 </body>
 </html>
