--- a/public/meti_page.html
+++ b/public/meti_page.html
@@ -26,6 +26,13 @@
         <img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für den Button zur Nutzerakte">
         <button id="akte" type="button">Nutzerprofile öffnen</button>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn">Menü</button>
+        <div class="dropdown-content">
+            <a href="#">Einstellungen</a>
+            <a href="index.html">Ausloggen</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
