--- a/public/arzt_page.html
+++ b/public/arzt_page.html
@@ -31,5 +31,15 @@
     <img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für den Button zur Patientenakte">
     <button onClick="location.href='patientenakte_suchen.html'" id="akte" type="button">Patientenakte öffnen</button>
 </div>
+
+
+
+<div class="dropdown">
+    <button class="dropbtn">Menü</button>
+    <div class="dropdown-content">
+        <a href="#">Einstellungen</a>
+        <a href="index.html">Ausloggen</a>
+    </div>
+</div>
 </body>
 </html>
