--- a/public/patient_page.html
+++ b/public/patient_page.html
@@ -23,5 +23,12 @@
         <img src="./resources/silhouette_patient_weiß.png" alt="Der Hintergrund für den Button zur Patientenakte">
         <button id="akte" type="button">Patientenakte öffnen</button>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn">Menü</button>
+        <div class="dropdown-content">
+            <a href="#">Einstellungen</a>
+            <a href="index.html">Ausloggen</a>
+        </div>
+    </div>
 </body>
 </html>
