Dropdown, Client.js und CSS

--- a/public/arzt_page.html
+++ b/public/arzt_page.html
@@ -38,6 +38,7 @@
     <button class="dropbtn">Menü</button>
     <div class="dropdown-content">
         <a href="#">Einstellungen</a>
+        <a href="#">Beschwerden anzeigen</a>
         <a href="index.html">Ausloggen</a>
     </div>
 </div>
