--- a/public/patient_anlegen_per_daten.html
+++ b/public/patient_anlegen_per_daten.html
@@ -28,18 +28,12 @@
     <p class="center">Bitte Geschlecht auswählen.</p>
 
 
-
-<div class="center">
-    <form>
-        <input type="image" id="male" src="resources/male_icon.png" alt="maskulin geschlecht" class="maskulin_position_button">
-    </form>
-    <form>
-        <input type="image" id="female" src="resources/female_icon.png" alt="feminin geschlecht" class ="position_female_button">
-    </form>
-    <form>
-        <input type="image" id="gemischt" src="resources/gemischt_icon.png" alt="gemischt geschlecht" class="position_gemischt_button">
-    </form>
-
+<div class="dropdown_geschlehter">
+    <select>
+        <option>weiblich</option>
+        <option>männlich</option>
+        <option>intersexuell</option>
+    </select>
 </div>
 
 </body>
