--- a/public/patientenakte.html
+++ b/public/patientenakte.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Patientenakte</title>
-    <link href="styles/patientenakte_öffnen_style.css" type="text/css" rel="stylesheet">
+    <link href="styles/patientenakte.css" type="text/css" rel="stylesheet">
+    <script src="client.js"></script>
 </head>
 <body>
 <img src="resources/patientenakte.png" id="patientenakte" alt="Patientenakte Kategorie">
@@ -13,23 +14,25 @@
 <form action="arzt_page.html">
     <input type="image" id="schließen_button" src="resources/button_schließen_blau.png" alt="schließen button" class="bottom_right">
 </form>
-<form>
-    <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
-</form>
 
 
 
 <div>
-    <form>
-        <input type="image" id="oberkörper" src="resources/ober_mit_hand.png" alt="oberkörper" class="oberkörper">
-    </form>
+
+    <button onclick="showBrain()" id="kopf"><img src="resources/kopf.png" style = "width: 10.5em;"/></button>
+
+</div>
+
+
+<div>
+
+    <button onclick="showHerLun()" id="oberkörper" ><img src="resources/ober_mit_hand.png"style = "width: 17.5em;"/></button>
 
 </div>
 
 <div>
-    <form>
-        <input type="image" id="beine" src="resources/beine.png" alt="beine" class="beine">
-    </form>
+
+    <button onclick="showKidney()" id="beine"><img src="resources/beine.png" style=" width: 8em;"/></button>
 </div>
 
 <div>
