Dropdown, Client.js und CSS

--- a/public/patient_anlegen_per_daten.html
+++ b/public/patient_anlegen_per_daten.html
@@ -18,7 +18,8 @@
 <input type="text" id="email" name="email" placeholder="Email" class="center">
 <br>
 <input type="text" id="geburtstag" name="geburtstag" placeholder="Geburtstag" class="center">
-
+<br>
+<input type="text" id="krankheit" name="geburtstag" placeholder="Krankheit" class="center">
 
 <form action ="patient_anlegen_vitalparameter.html">
     <input type="image" id="weiter_button" src="resources/weiter_button.png" alt="weiter button" class="bottom_right">
@@ -28,8 +29,8 @@
     <p class="center">Bitte Geschlecht auswählen.</p>
 
 
-<div class="dropdown_geschlehter">
-    <select>
+<div >
+    <select class="dropdown_geschlehter">
         <option>weiblich</option>
         <option>männlich</option>
         <option>intersexuell</option>
