--- a/public/arzt_page.html
+++ b/public/arzt_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Arzt Homee</title>
+    <title>Arzt Home</title>
     <link href="./styles/arzt_page_style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
