--- a/public/patient_page.html
+++ b/public/patient_page.html
@@ -27,7 +27,7 @@
         <button class="dropbtn">Menü</button>
         <div class="dropdown-content">
             <a href="#">Einstellungen</a>
-            <a href="index.html">Ausloggen</a>
+            <a href="/ausloggen">Ausloggen</a>
         </div>
     </div>
 </body>
