--- a/public/patient_anlegen_vitalparameter.html
+++ b/public/patient_anlegen_vitalparameter.html
@@ -9,52 +9,49 @@
 <body>
     <img src="resources/vitalparameter_kategorie.png" id="vitalparameter" alt="Vitalparameter Kategorie">
 
-    <form>
-         <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
-    </form>
+
+    <form action="arzt_page.html" method="post">
+
+
+        <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
+
+        <div>
+                <input type="image" id="oberkörper" src="resources/ober_mit_hand.png" alt="oberkörper" class="oberkörper">
+        </div>
+
+        <div>
+                <input type="image" id="beine" src="resources/beine.png" alt="beine" class="beine">
+        </div>
+
+        <div>
+            <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
+        </div>
+
+        <input type="text" id="gehrindaten" name="gehirndaten" placeholder="Bitte Werte eintragen.">
+
+        <div>
+            <img src="resources/herz.png" id="herz" alt="Herz">
+        </div>
+
+        <input type="text" id="herzdaten" name="herzdaten" placeholder="Bitte Werte eintragen.">
+
+        <div>
+            <img src="resources/lungen.png" id="lunge" alt="Lunge">
+        </div>
+
+        <input type="text" id="lungendaten" name="lungendaten" placeholder="Bitte Werte eintragen.">
+
+        <div>
+            <img src="resources/nieren.png" id="nieren" alt="Niere">
+        </div>
+
+        <input type="text" id="nierendaten" name="nierendaten" placeholder="Bitte Werte eintragen.">
 
 
 
-    <div>
-        <form>
-            <input type="image" id="oberkörper" src="resources/ober_mit_hand.png" alt="oberkörper" class="oberkörper">
-         </form>
-
-    </div>
-
-    <div>
-        <form>
-             <input type="image" id="beine" src="resources/beine.png" alt="beine" class="beine">
-         </form>
-    </div>
+        <button style="background: none;border: none;" class="bottom_right"><img src="resources/bestätigen_button.png" /></button>
 
 
-
-    <div>
-        <textarea rows="4" cols="50" class="notizblock">
-            Notizen
-        </textarea>
-    </div>
-
-    <div>
-        <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
-    </div>
-    <input type="text" id="gehrindaten" name="gehirndaten" placeholder="Bitte Werte eintragen.">
-    <div>
-        <img src="resources/herz.png" id="herz" alt="Herz">
-    </div>
-    <input type="text" id="herzdaten" name="herzdaten" placeholder="Bitte Werte eintragen.">
-    <div>
-        <img src="resources/lungen.png" id="lunge" alt="Lunge">
-    </div>
-    <input type="text" id="lungendaten" name="lungendaten" placeholder="Bitte Werte eintragen.">
-    <div>
-        <img src="resources/nieren.png" id="nieren" alt="Niere">
-    </div>
-    <input type="text" id="nierendaten" name="nierendaten" placeholder="Bitte Werte eintragen.">
-
-    <form>
-        <input type="image" id="bestätigen_button" src="resources/bestätigen_button.png" alt="bestätigen button" class="bottom_right">
     </form>
 
 </body>
