--- a/public/patient_anlegen_vitalparameter.html
+++ b/public/patient_anlegen_vitalparameter.html
@@ -10,7 +10,7 @@
     <img src="resources/vitalparameter_kategorie.png" id="vitalparameter" alt="Vitalparameter Kategorie">
 
 
-    <form action="arzt_page.html" method="post">
+    <form action="/patient_anlegen_vitalparameter" method="post">
 
 
         <input type="image" id="kopf" src="resources/kopf.png" alt="kopf" class="kopf">
@@ -49,7 +49,7 @@
 
 
 
-        <button style="background: none;border: none;" class="bottom_right"><img src="resources/bestätigen_button.png" /></button>
+        <button type="submit" style="background: none;border: none;" class="bottom_right"><img src="resources/bestätigen_button.png" /></button>
 
 
     </form>
