--- a/public/konto_aktivieren.html
+++ b/public/konto_aktivieren.html
@@ -15,7 +15,7 @@
     </form>
 
 
-        <form action="passwort_anlegen.html">
+        <form action="/passwort_anlegen">
 
             <input type="image" id="pw_anlegen_button" src="resources/weiter_button.png" alt="Der Weiter Button">
 
