--- a/public/passwort_anlegen.html
+++ b/public/passwort_anlegen.html
@@ -14,7 +14,7 @@
     <input name="repeat_pass" placeholder="Passwort wiederholen" type="text"><br>
 </form>
 <div>
-    <a class="bestätigen" href="">
+    <a class="bestätigen">
         <img src="resources/bestätigen_button.png" alt="Der Bestätigen Button">
     </a>
 </div>
