--- a/public/passwort_anlegen.html
+++ b/public/passwort_anlegen.html
@@ -14,9 +14,9 @@
     <input name="repeat_pass" placeholder="Passwort wiederholen" type="text"><br>
 </form>
 <div>
-    <a class="bestätigen">
-        <img src="resources/bestätigen_button.png" alt="Der Bestätigen Button">
-    </a>
+    <form class="bestätigen" action="/passwort_anlegen" method="post">
+        <button alt="Der Bestätigen Button" type="submit"> <img src="resources/bestätigen_button.png"> </button>
+    </form>
 </div>
 </body>
 </html>
