Ich kanns nicht mehr sehen xD

--- a/public/patientenakte.html
+++ b/public/patientenakte.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <img src="resources/patientenakte.png" id="patientenakte" alt="Patientenakte Kategorie">
-<p id="p" class="center">Patienten ID</p>
+
 
 
 <form action="arzt_page.html">
@@ -17,36 +17,35 @@
 
 
 
-<div>
+    <div>
 
-    <button onclick="showBrain()" id="kopf"><img src="resources/kopf.png" style = "width: 10.5em;"/></button>
+         <button onclick="showBrain()" id="kopf"><img src="resources/kopf.png" style = "width: 10.5em;"/></button>
 
+    </div>
+
+    <div>
+
+        <button onclick="showHerLun()" id="oberkörper" ><img src="resources/ober_mit_hand.png"style = "width: 17.5em;"/></button>
+
+    </div>
+
+    <div style= "height: 0em;">
+
+         <button onclick="showKidney()" id="beine"><img src="resources/beine.png" style=" width: 8em;"/></button>
+    </div>
+
+
+
+<div class=" daten">
+    <p > Vorname</p>
+    <p> Nachname</p>
+    <p> Alter</p>
+    <p> Geschlecht</p>
+    <p> Email</p>
+    <p> Krankheit</p>
 </div>
 
-
-<div>
-
-    <button onclick="showHerLun()" id="oberkörper" ><img src="resources/ober_mit_hand.png"style = "width: 17.5em;"/></button>
-
-</div>
-
-<div>
-
-    <button onclick="showKidney()" id="beine"><img src="resources/beine.png" style=" width: 8em;"/></button>
-</div>
-
-<div>
-        <textarea rows="4" cols="50" class="notizblock">
-            Notizen
-        </textarea>
-</div>
-
-
-<div>
-        <textarea rows="4" cols="50" class="patientennotiz">
-            Patientennotiz
-        </textarea>
-</div>
+>
 
 <div>
     <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
