Ich kanns nicht mehr sehen xD teil 2

--- a/public/nutzer_anlegen.html
+++ b/public/nutzer_anlegen.html
@@ -20,14 +20,15 @@
                 <option value="Admin">Admin</option>
             </select>
             <p class="nutzer_status">Bitte Geschlecht auswählen.</p>
-            <a class="gender" href="#">
-                <img src="resources/male_icon.png" alt="Das Zeichen für das männliche Geschlecht"></a>
-            <a class="gender" href="#">
-                <img src="resources/female_icon.png" alt="Das Zeichen für das weibliche Geschlecht"></a>
-            <a class="gender" href="#">
-                <img src="resources/gemischt_icon.png" alt="Das Zeichen für das gemischte Geschlecht">
-            </a>
+
         </form>
+        <div >
+            <select class="dropdown_geschlehter" name="geschlecht">
+                <option>weiblich</option>
+                <option>männlich</option>
+                <option>intersexuell</option>
+            </select>
+        </div>
         <div>
             <a class="weiter" href="">
                 <img src="resources/weiter_button.png" alt="Der Weiter Button">
