--- a/public/patientenakte_suchen.html
+++ b/public/patientenakte_suchen.html
@@ -19,17 +19,12 @@
     <input type="image" id="weiter_button" src="resources/button_weiter_blau.png" alt="weiter button" class="bottom_right">
 </form>
 
-<div class="center">
-    <form>
-        <input type="image" id="male" src="resources/maleblau.png" alt="maskulin geschlecht" class="maskulin_position_button">
-    </form>
-    <form>
-        <input type="image" id="female" src="resources/femaleblau.png" alt="feminin geschlecht" class ="position_female_button">
-    </form>
-    <form>
-        <input type="image" id="gemischt" src="resources/gemischtblau.png" alt="gemischt geschlecht" class="position_gemischt_button">
-    </form>
-
+<div >
+    <select class="dropdown_geschlehter" name="geschlecht">
+        <option>weiblich</option>
+        <option>männlich</option>
+        <option>intersexuell</option>
+    </select>
 </div>
 </body>
 </html>
