--- a/public/nutzerprofil_suchen.html
+++ b/public/nutzerprofil_suchen.html
@@ -18,26 +18,25 @@
 <form>
     <input type="image" id="weiter_button" src="resources/button_weiter_blau.png" alt="weiter button" class="bottom_right">
 </form>
-
+<p class = center>Status Nutzer bitte auswählen.</p>
 <div class="dropdown" id="center">
-    <button class="dropbtn">Status Nutzer</button>
-    <div class="dropdown-content">
-        <a href="#">Arzt</a>
-        <a href="#">Patient</a>
-        <a href="#">Informatiker</a>
+    <div >
+        <select class="dropdown_geschlehter" >
+            <option>Arzt</option>
+            <option>Patient</option>
+            <option>Meti</option>
+        </select>
     </div>
 </div>
 <br>
 <div class="center">
-    <form>
-        <input type="image" id="male" src="resources/maleblau.png" alt="maskulin geschlecht" class="maskulin_position_button">
-    </form>
-    <form>
-        <input type="image" id="female" src="resources/femaleblau.png" alt="feminin geschlecht" class ="position_female_button">
-    </form>
-    <form>
-        <input type="image" id="gemischt" src="resources/gemischtblau.png" alt="gemischt geschlecht" class="position_gemischt_button">
-    </form>
+    <div >
+        <select class="dropdown_geschlehter" name="geschlecht">
+            <option>weiblich</option>
+            <option>männlich</option>
+            <option>intersexuell</option>
+        </select>
+    </div>
 
 </div>
 </body>
