--- a/public/patientenakte_suchen.html
+++ b/public/patientenakte_suchen.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 <br>
-<form action ="patientenakte_öffnen.html">
+<form action ="/patientenakte" method="post">
     <input type="text" id="patienten_id" name="vname" placeholder="Vorname des Patienten" class="center">
     <br>
     <input type="text" id="patienten_id" name="nname" placeholder="Nachname des Patienten" class="center">
