--- a/public/nutzer_anlegen.html
+++ b/public/nutzer_anlegen.html
@@ -21,7 +21,7 @@
                 <p class="nutzer_status">Bitte Geschlecht auswählen.</p>
 
             <div >
-                <select class="dropdown_geschlehter" name="geschlecht">
+                <select class="dropdown_geschlechter" name="geschlecht">
                     <option>weiblich</option>
                     <option>männlich</option>
                     <option>intersexuell</option>
