--- a/public/nutzerprofil_suchen.html
+++ b/public/nutzerprofil_suchen.html
@@ -16,10 +16,10 @@
     <br>
     <button type="submit" id="weiter_button" alt="weiter button" class="bottom_right"> <img src="resources/button_weiter_blau.png"> </button>
 
-    <p class = center>Status Nutzer bitte auswählen.</p>
+    <p class = center id="status">Status Nutzer bitte auswählen.</p>
     <div class="dropdown" id="center">
         <div>
-            <select class="dropdown_geschlechter" >
+            <select name="status" class="dropdown_geschlechter" >
                 <option>Arzt</option>
                 <option>Patient</option>
                 <option>Meti</option>
