Doku ist glaube ich fertig. :D

--- a/public/patientenakte_suchen.html
+++ b/public/patientenakte_suchen.html
@@ -6,7 +6,7 @@
     <link href="styles/patientenakte_suchen_style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+<!-- Vitalparameter EEG wird dynamisch generiert.-->
 <img src="resources/button_p_suchen.png" id="patientakte_suchen" alt="Kategorie Patientenakte suchen">
 
 <br>
